--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.Newsletter"
         tools:targetApi="31">
         <activity
+            android:name=".listView"
+            android:exported="false" />
+        <activity
+            android:name=".haberler"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
