--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.Newsletter"
         tools:targetApi="31">
         <activity
+            android:name=".iletisim_bilgilerimizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".vizyon_ve_misyonActivity"
+            android:exported="false" />
+        <activity
+            android:name=".hakkimizdaActivity"
+            android:exported="false" />
+        <activity
             android:name=".detayliHaberler"
             android:exported="false" />
         <activity
